Segunda modificacion del index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </label>
         </p>
         <p class="submit"><input type="submit" name="commit" value="Aceptar"></p>
-        <p class="registro"><input type="submit" name="registro" value="Registarme"></p>
+        <p class="registro"><input type="submit" name="registro" value="Registarme" accion="registro.html"></a></p>
      
 
    	 <p class="login-forgot"> <a href="index.html">He olvidado la contraseña</a> </p>
