Segunda version del registro

--- a/registro.html
+++ b/registro.html
@@ -16,6 +16,8 @@
       <form method="post" action="registro.html">
         <p>Nombre: <input type="text" name="nombre" value="" placeholder="Nombre"> </p>
         <p>Apellidos: <input type="text" name="apellidos" value="" placeholder="Apellidos"></p>
+        <p>Fecha de nacimiento: <input type="text" name="fecha" placeholder="dd/mm/aaaa"></input></p>
+        <p>Tipo de usuario: <input type="text" name="usuario" placeholder="Médico/Paciente"></input></p>
         <p>Correo electrónico: <input type="text" name="email" value="" placeholder="ejemplo@ejemplo.com"></p>
         <p>Contraseña: <input type="password" name="password1" value="" placeholder=""></p>
         <p>Repita la contraseña: <input type="password" name="password2" value="" placeholder=""></p>
